--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_articles_title">Search Articles</string>
+    <string name="notifications_toolbar">Notifications</string>
+    <string name="help_toolbar">Help</string>
+    <string name="about_toolbar">About</string>
+    <string name="search_query_term">Your Search Query Term</string>
+    <string name="datepicker_text_begin_date">Begin Date</string>
+    <string name="datepicker_text_end_date">End date</string>
+    <string name="checkbox_arts">Arts</string>
+    <string name="checkbox_politics">Politics</string>
+    <string name="checkbox_business">Business</string>
+    <string name="checkbox_sports">Sport</string>
+    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
+    <string name="checkbox_travel">Travel</string>
+    <string name="search_button_search_activity">SEARCH</string>
 </resources>
